# scratch

./: .gitignore  clase-svms.md  make_booklet_pdf.py  music21.ipynb  parse_animals.json.py  pfm.py  scrabble_helper.py  scratch.py
IronFist/: .gitignore  Cargo.toml
a-py-el/: apl_grammar.txt  apyel_parsing.py  ascii2syms.py  peggrammar_parse_tree.dot  peggrammar_parser_model.dot  program_parse_tree.dot  program_peg_parser_model.dot
bad-posture-detect/: detector.py  slouch_detect.py
ball_sort_puzzle/: search.py  solve_puzzle.py  utils.py
bookmark_dedup/: README.md  json_bookmarks_dedup.ipynb
clip_experiment/: CLIP-experiment.ipynb
colors/: color_explore.ipynb  color_explorer.py  color_helpers.py  image_rgba.html  image_rgba.py  slider_callback.js
commander_gui/: gui.py
compiler/: compiler_experiments.ipynb  f0.cpp
contar_palmas/: README.md  _data  ideas-contar-palmas.md  ideas-proyecto-deteccion.md  requirements.txt  split_file_v0.ipynb
coq/: exercises.v
corona_viz/: app.py  colombia.py  common.py  corona_viz.html  corona_viz_col.html  etl.py  gen_parquet.py  kill_srv.sh  plots.py  start_cvv_srv.sh  start_local.sh  try_pystan.py
crawl_miner/: Cargo.toml  crawl_mining.py
cython_lev/: levenshtein_comp.py  levenshtein_dist.c  levenshtein_dist.pyx  levenshtein_setup.py
direct-rulivery/: Cargo.toml
direct-rulivery/src/: main.rs
eisenfaust-prompt/: scratch.py
etymo_graph/: api_types.py  ety_pkg_explore.py  etymo_graph0.tmpl.html  kb.py  out.html  process_kb.py  start_svc_local.sh  svc.py  words.yml
fastai/: try_out_chapter_1.ipynb  (+1 more)
(+217 files in other folders)
