[package]
name = "direct-rulivery"
version = "0.1.0"
authors = ["Teo Restrepo <mateini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
# rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "v0.5.0-rc.1" } 

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_sqlite_pool"]

# [dependencies.rocket_contrib]
# git = "https://github.com/SergioBenitez/Rocket"
# rev = "v0.5.0-rc.1"
# version = "0.5.0-rc.1"
# default-features = false
# features = ["diesel_postgres_pool"]